# chonkie

./: .gitignore  CONTRIBUTING.md  DOCS.md  Dockerfile  PLAN.md  README-API.md  README.md  STRINGZILLA_EVALUATION.md  TEST_COVERAGE_PLAN.md  benchmark_final.py  benchmark_stringzilla.py  check_sz_methods.py  chonkie-cli.py  debug_proposition.py  demo_chefs.py  demo_config.py  docker-compose.yml  llms.txt  pyproject.toml  requirements-api.txt  setup.py  test_base_url.py  test_components.py  test_pdf_chef.py  test_script.py  test_split_byteset.py  test_stringzilla_api.py  verification_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  lazy-import.yml  lint.yml  pyodide.yml  python-publish-wheels.yml  python-test-pr-main.yml  python-test-pr.yml  python-test.yml  static-type-check.yml
api/: main.py  schemas.py  utils.py
api/routes/: __init__.py  chunking.py  refineries.py
benchmarks/: async_benchmark.py
docs/: .env.example  .gitignore  docs.json  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
docs/api/agents/: chat.mdx  create.mdx  delete.mdx  get.mdx  list.mdx  mcp.mdx  research.mdx  update.mdx
docs/api/chunkers/: code-chunker.mdx  late-chunker.mdx  neural-chunker.mdx  recursive-chunker.mdx  semantic-chunker.mdx  sentence-chunker.mdx  slumber-chunker.mdx  token-chunker.mdx
docs/api/common/: introduction.mdx  playground.mdx
docs/api/knowledge/: create.mdx  delete-file.mdx  delete.mdx  download.mdx  get-files.mdx  list.mdx  upload.mdx
docs/api/parse/: parse.mdx
docs/api/pipelines/: create.mdx  delete.mdx  execute.mdx  get.mdx  list.mdx  update.mdx  validate.mdx
docs/api/refineries/: embeddings.mdx  overlap.mdx
docs/api/search/: search.mdx
docs/app/: global.css  layout.tsx
docs/app/(docs)/: opengraph-image.tsx
docs/chonkie-cloud/: openapi.json
docs/common/: chunking-api.mdx  labs.mdx  open-source.mdx  welcome.mdx
docs/components/: docs-layout-client.tsx  github-releases.tsx  mdx.tsx  param-field.tsx  product-switcher.tsx
docs/content/docs/: meta.json
docs/lib/: constants.ts  doc-collections.ts  docs-products.ts  filter-tree.ts  layout.shared.tsx  product-routes.ts  sort-search-results.ts
docs/oss/: changelog.mdx  installation.mdx  introduction.mdx  pipelines.mdx  quick-start.mdx
docs/oss/api/: docker.mdx  endpoints.mdx  overview.mdx  pipelines.mdx  quickstart.mdx
docs/oss/chefs/: liteparse.mdx  markdownchef.mdx  mistral-ocr.mdx  overview.mdx  tablechef.mdx  textchef.mdx
docs/oss/chunkers/: async.mdx  code-chunker.mdx  fast-chunker.mdx  late-chunker.mdx  neural-chunker.mdx  (+9 more)
docs/parse/: introduction.mdx
docs/python-sdk/: changelog.mdx
docs/scripts/: external-docs.config.mjs  fetch-releases.mjs  sync-chonkiejs.mjs  sync-external-docs.mjs
examples/: contextual_refinery_example.py  pdf_processing_demo.py  propositional_refinery_example.py  summary_refinery_example.py
scripts/: test_api.sh
src/chonkie/: __init__.py  logger.py  tokenizer.py  utils.py
temp_check/tree_sitter_language_pack-0.13.0.dist-info/: RECORD
tests/: conftest.py  test_async_pipeline.py  test_chomp.py  test_chomp_config.py  test_chonkie.py  test_cli.py  test_contextual_refinery.py  test_logging.py  test_overlap_mode_bug.py  test_pipeline.py  test_propositional_refinery.py  test_structured_chefs.py  test_summary_refinery.py  test_table_converter.py  test_tokenizer.py  test_tokenizer_default_character.py  test_utils.py  test_viz.py
tests/api/: conftest.py  test_api_integration.py  test_api_utils.py
tests/chef/: __init__.py  test_base_chef.py  test_chef.py  test_liteparse.py  test_markdown_chef.py  test_mistral_ocr.py  test_table_chef.py
tests/chefs/: conftest.py  test_base.py  test_docling.py  test_markitdown.py  test_mistral_ocr.py
tests/chunkers/: test_async_chunker.py  test_code_chunker.py  test_fast_chunker.py  test_late_chunker.py  test_markdown_chunker.py  test_neural_chunker.py  test_peak_detection.py  test_recursive_chunker.py  test_sdpm_chunker.py  test_semantic_chunker.py  test_semantic_chunker_peak_detection.py  test_sentence_chunker.py  test_slumber_chunker.py  test_table_chunker.py  test_teraflopai_chunker.py  test_token_chunker.py
tests/cloud/: test_cloud_code_chunker.py  test_cloud_late_chunker.py  test_cloud_neural_chunker.py  test_cloud_pipeline.py  test_cloud_recursive_chunker.py  test_cloud_refineries.py  test_cloud_semantic_chunker.py  test_cloud_sentence_chunker.py  test_cloud_slumber_chunker.py  test_cloud_token_chunker.py
tests/embeddings/: test_auto_embeddings.py  test_azure_openai_embeddings.py  test_catsu_embeddings.py  test_cohere_embeddings.py  test_custom_embeddings.py  test_embeddings_registry.py  test_gemini_embeddings.py  test_infinity_embeddings.py  test_jina_embeddings.py  test_litellm_embeddings.py  test_minimax_embeddings.py  test_model2vec_embeddings.py  test_new_providers.py  test_ollama_embeddings.py  test_openai_embeddings.py  test_sentence_transformer_embeddings.py  test_vertexai_embeddings.py  test_voyageai_embeddings.py  utils.py
tests/fetcher/: __init__.py  test_fetcher.py
tests/genie/: test_azure_openai_genie.py  test_base_genie.py  test_cerebras_genie.py  test_gemini_genie.py  test_groq_genie.py  test_minimax_genie.py  test_openai_genie.py
tests/handshakes/: test_base_handshake.py  test_chroma_handshake.py  test_elastic_handshake.py  test_handshake_utils.py  test_lancedb_handshake.py  test_milvus_handshake.py  test_mongodb_handshake.py  test_payload_metadata.py  test_pgvector_handshake.py  test_pinecone_handshake.py  test_pinecone_handshake_mocked.py  test_qdrant_handshake.py  test_turbopuffer_handshake.py  test_weaviate_handshake.py
tests/pipeline/: test_pipeline_coverage.py
tests/porters/: test_base_porter.py  test_datasets_porter.py  test_json_porter.py
tests/refinery/: __init__.py  test_embedding_refinery.py  test_overlap_refinery.py
tests/types/: test_base.py  test_code.py  test_document.py  test_markdown.py  test_pdf_document.py  test_recursive.py  test_sentence.py
tests/vision/: test_mistral_ocr.py
(+336 files in other folders)
